SalesForce Assignment/SOQL Assignment/src/objects/Assignment_Object__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_of_5__c</fullName>
        <label>Multiple of 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekday_Date__c</fullName>
        <label>Weekday Date</label>
        <type>Date</type>
    </fields>
    <label>Assignment Object</label>
    <nameField>
        <label>Assignment Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Credit_Card_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( ISBLANK( Credit_Card_Number__c ) ),
NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;)))</errorConditionFormula>
        <errorMessage>Only in format  9999-9999-9999-9999 or 9999999999999999 is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_of_5</fullName>
        <active>true</active>
        <errorConditionFormula>(MOD( Multiple_of_5__c ,5))  = 0</errorConditionFormula>
        <errorDisplayField>Multiple_of_5__c</errorDisplayField>
        <errorMessage>Please enter the field value as multiple of 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_between_0_to_100</fullName>
        <active>true</active>
        <errorConditionFormula>(Mix_Pct__c  &gt;= 0)  || (Mix_Pct__c  &lt;= 100)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Value of this field should be on;y between 0 to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weekday_dates</fullName>
        <active>true</active>
        <description>Only dates which are weekdays are allowed</description>
        <errorConditionFormula>(MOD(TODAY()- DATE(1900, 1, 7),7 )&lt;&gt; 0) || ((MOD(TODAY()- DATE(1900, 1, 7),7 ))&lt;&gt; 6)</errorConditionFormula>
        <errorDisplayField>Weekday_Date__c</errorDisplayField>
        <errorMessage>Dates of only the weekdays will be showed</errorMessage>
    </validationRules>
</CustomObject>